syntax = "proto2";

package ui;

//天魔体信息
message TianMoInfo{
    //阶数
    required int32 advancedId=1;
    //天魔体丹食丹等级
    required int32 tianMoDanLevel=2;
    //天魔体丹培养进度值
    required int32 progress=3;
}

//天魔体信息请求
message CSTianMoGet {
}
//天魔体信息应答
message SCTianMoGet{
    //阶数
    required int32 advancedId=1;
    //天魔体丹食丹等级
     required int32 tianMoDanLevel=2;
    //祝福值 
    optional int32 bless=3;
    //祝福值开始时间
    optional int64 blessTime=4;
    //天魔体丹培养进度值
    required int32 progress=5;
    //充值数
    required int64 chargeGold=6;
}

//食用天魔体丹请求
message CSTianMoEatDan {
    required int32 num=1;
}
//食用天魔体丹应答
message SCTianMoEatDan {
    //天魔体丹食丹等级
    required int32 level=1;
    //培养进度值
    required int32 progress=2;
}


//天魔体进阶请求
message CSTianMoAdvanced{
    //是否自动进阶
    required bool autoFlag=1;
}
//天魔体进阶应答
message SCTianMoAdvanced{
    //阶数
    required int32 advancedId=1;
    //祝福值
    optional int32 bless=2;
    //祝福值开始时间
    optional int64 blessTime=3;
    //进阶方式 1进阶丹 2祝福丹 3直升券
    required int32 advancedType=4;
    //是否暴击
    optional bool isDouble=5 [default=false];
    //总祝福值
    optional int32 totalBless=6;
}

//天魔体信息推送
message SCTianMoInfo{
    required TianMoInfo tianMoInfo=1;
}

//充值数推送
message SCTianMoChargeGold{
    required int64 chargeGold=1;
}
